cargo-features = ["resolver"]

[workspace]
members = [
	"node",
	"node/cli",
	"node/service",
	"node/e2e-tests",

	"modules/*",
	"modules/evm-utility/macro",
	"inspect",
	"primitives",
	"rpc",

	"runtime/common",
	"runtime/mandala",
	"runtime/karura",
	"runtime/acala",
	"runtime/integration-tests",

	"orml/asset-registry",
	"orml/auction",
	"orml/authority",
	"orml/benchmarking",
	"orml/currencies",
	"orml/gradually-update",
	"orml/nft",
	"orml/oracle",
	"orml/parameters",
	"orml/rewards",
	"orml/tokens",
	"orml/tokens/runtime-api",
	"orml/traits",
	"orml/unknown-tokens",
	"orml/utilities",
	"orml/vesting",
	"orml/xcm-support",
	"orml/xcm",
	"orml/xtokens",
 	"orml/oracle/runtime-api",

	"ecosystem-modules/stable-asset/lib/stable-asset",
	"evm-tests/jsontests",
]

resolver = "2"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
# Acala runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# Note that this does **not** affect crates that depend on Substrate. In other words, if you add
# a dependency on Substrate, you have to copy-paste this list in your own `Cargo.toml` (assuming
# that you want the same list). This list is only relevant when running `cargo build` from within
# the Substrate workspace.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-zebra = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }
insta.opt-level = 3
similar.opt-level = 3

[workspace.dependencies]
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }

[patch."https://github.com/paritytech/polkadot-sdk"]
# substrate
binary-merkle-tree = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
frame-benchmarking = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
frame-benchmarking-cli = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
frame-election-provider-support = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
frame-executive = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
frame-remote-externalities = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
frame-support = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
frame-support-procedural = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
frame-support-procedural-tools = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
frame-support-procedural-tools-derive = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
frame-system = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
frame-system-benchmarking = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
frame-try-runtime = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
mmr-gadget = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
mmr-rpc = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-aura = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-authority-discovery = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-authorship = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-babe = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-bags-list = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-balances = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-beefy = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-beefy-mmr = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-bounties = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-child-bounties = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-collective = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-conviction-voting = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-democracy = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-election-provider-support-benchmarking = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-elections-phragmen = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-fast-unstake = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-grandpa = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-identity = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-im-online = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-indices = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-membership = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-message-queue = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-mmr = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-multisig = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-nis = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-nomination-pools = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-nomination-pools-benchmarking = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-nomination-pools-runtime-api = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-offences = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-offences-benchmarking = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-preimage = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-proxy = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-ranked-collective = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-recovery = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-referenda = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-root-testing = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-scheduler = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-session = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-session-benchmarking  = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-society = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-staking = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-staking-reward-fn = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-staking-runtime-api = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-state-trie-migration = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-sudo = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-timestamp = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-tips = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-transaction-payment = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-treasury = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-utility = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-vesting = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-whitelist = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-authority-discovery = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-basic-authorship = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-block-builder = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-chain-spec = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-cli = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-client-api = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-client-db = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-consensus = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-consensus-aura = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-consensus-babe = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-consensus-beefy = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-consensus-beefy-rpc = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-consensus-epochs = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-consensus-grandpa = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-consensus-grandpa-rpc = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-consensus-slots = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-executor = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-executor-common = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-executor-wasmtime = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-informant = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-keystore = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-network = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-network-common = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-network-gossip = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-network-light = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-network-sync = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-network-transactions = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-offchain = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-rpc = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-rpc-api = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-rpc-server = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-service = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-storage-monitor = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-sync-state-rpc = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-sysinfo = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-telemetry = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-tracing = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-transaction-pool = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-transaction-pool-api = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sc-utils = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-api = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-application-crypto = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-arithmetic = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-authority-discovery = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-block-builder = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-blockchain = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-consensus = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-consensus-aura = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-consensus-babe = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-consensus-beefy = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-consensus-grandpa = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-consensus-slots = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-core = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-debug-derive = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-externalities = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-inherents = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-io = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-keyring = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-keystore = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-maybe-compressed-blob = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-mmr-primitives = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-npos-elections = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-offchain = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-rpc = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-runtime = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-runtime-interface = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-session = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-staking = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-state-machine = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-std = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-storage = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-timestamp = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-tracing = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-transaction-pool = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-trie = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-version = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-wasm-interface = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
sp-weights = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
substrate-build-script-utils = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
substrate-state-trie-migration-rpc = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
substrate-test-client = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
substrate-test-utils = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
substrate-wasm-builder = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
try-runtime-cli = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }

# polkadot
kusama-runtime = { package = "staging-kusama-runtime", git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
kusama-runtime-constants = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-xcm = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
pallet-xcm-benchmarks = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-cli = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-core-primitives = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-network-bridge = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-node-core-av-store = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-node-core-pvf = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-node-metrics = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-node-network-protocol = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-node-primitives = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-node-subsystem = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-node-subsystem-util= { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-overseer = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-parachain = { package = "polkadot-parachain-primitives", git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-primitives = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-rpc = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-runtime = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-runtime-common = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-runtime-constants = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-service = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-statement-table = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-test-runtime = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-test-service = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
rococo-runtime = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
test-runtime-constants = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
tracing-gum = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
westend-runtime = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
xcm = { package = "staging-xcm", git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
xcm-builder = { package = "staging-xcm-builder", git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
xcm-simulator = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-node-core-runtime-api = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-node-collation-generation = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-collator-protocol = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
polkadot-availability-recovery = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }

# cumulus
cumulus-client-cli = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
cumulus-client-network = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
cumulus-client-pov-recovery = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
cumulus-client-service = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
cumulus-pallet-parachain-system  = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
cumulus-primitives-core = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
cumulus-primitives-utility = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
cumulus-test-relay-validation-worker-provider = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
parachain-info = { git = "https://github.com/paritytech//polkadot-sdk", rev = "f60318f68687e601c47de5ad5ca88e2c3f8139a7" }
